# wcs

./: .gitignore  CMakeLists.txt  COPYRIGHT  PROFILING.md  README.md  README_coding_style.txt
cmake/configure_files/: WCSConfig.cmake.in  wcs_config.hpp.in  wcs_module.lua.in
cmake/modules/: FindEXPRTK.cmake  FindHPCToolkit.cmake  FindMetis.cmake  FindNUMA.cmake  FindROSS.cmake  FindSBML.cmake  FindSundials.cmake  FindVTune.cmake  SetupCXX.cmake  SetupCatch2.cmake  SetupCereal.cmake  SetupExprTk.cmake  SetupIHeap.cmake  SetupProtobuf.cmake  WCSCMakeUtilities.cmake  WCSDebugUtilities.cmake
cmake/tests/: has_filesystem.cpp
scripts/: README.txt  dot2ps.sh  generate_network.py
scripts/mg_net/: ACM_BCB_2021.md  README.md  generate_network.py  generate_network_min0.py
scripts/trajectory/: README.md  get_max_species.sh  get_max_species_list.awk
src/: CMakeLists.txt  Makefile  bgl.hpp  config.mk  des.cpp  des.hpp  generate_cxx_code.cpp  partition.cpp  reaction.cpp  ssa-cfg.hpp  ssa.cpp  ssa_omp.cpp  ssa_partition.cpp  ssa_partition_inline.cpp  wcs-ross-bf.hpp  wcs_params.cpp  wcs_params.hpp  wcs_types.hpp
src/hybrid/: CMakeLists.txt  Checkpoint.hh  Funnel.hh  actor.hh  generateInfrastructure.py  hybrid.cpp  simtime.hh
src/params/: CMakeLists.txt  ssa_params.cpp  ssa_params.hpp
src/partition/: CMakeLists.txt  metis_params.cpp  metis_params.hpp  metis_partition.cpp  metis_partition.hpp  partition.cpp  partition.hpp  partition_info.cpp  partition_info.hpp
src/pdes_nrm/: CMakeLists.txt  readme.txt
src/pdes_nrm/matrix-cancel/: CMakeLists.txt  compile.matrix-cancel  matlpcancel.hh  matrix-cancel-model.cc  simtime.hh  zinv.hh
src/pdes_nrm/reactions/: CMakeLists.txt  matlpcancel.hh  reactions-model.cc  reactions.hh  runloop.sh  simtime.hh  throwoneaway.hh  zinv.hh
src/pdes_nrm/ross/include/: config.h  lz4.h  ross-extern.h  ross-inline.h  ross-kernel-inline.h  ross-types.h  ross.h  tw-eventq.h  tw-opts.h
src/pdes_nrm/ross/include/gvt/: mpi_allreduce.h
src/pdes_nrm/ross/src/: CMakeLists.txt  Makefile  buddy.cc  hash-quadratic.cc  lz4.cc  network-mpi.cc  rand-clcg4.cc  ross-global.cc  tw-event.cc  tw-kp.cc  tw-lp.cc  tw-opts.cc  tw-pe.cc  tw-sched.cc  tw-setup.cc  tw-state.cc  tw-stats.cc  tw-util.cc
src/pdes_nrm/ross/src/clock/: amd64.cc  bgl.cc  bgq.cc  gtod.cc  i386.cc
src/pdes_nrm/ross/src/gvt/: mpi_allreduce.cc
src/proto/: CMakeLists.txt  utils.cpp  utils.hpp  wcs_params.cpp  wcs_params.hpp  wcs_params.proto
src/proto/test/: Makefile  wcs_params.prototext  wcs_proto_test.cpp
src/proto/test-progopt/: Makefile  des_setup.prototext  part_setup.prototext  sim_setup.prototext  wcs_params.prototext  wcs_proto_progopt_test.cpp
src/reaction_network/: CMakeLists.txt  Makefile  edge.cpp  edge.hpp  edge_weighted.cpp  edge_weighted.hpp  network.cpp  network.hpp  rate_stats.hpp  reaction.hpp  reaction_base.cpp  reaction_base.hpp  reaction_impl.hpp  species.cpp  species.hpp  vertex.cpp  vertex.hpp  vertex_flat.cpp  vertex_flat.hpp  vertex_property_base.cpp  vertex_property_base.hpp
src/ross_files/: CMakeLists.txt  Funnel.hh  actor.cc  actor.hh  generateInfrastructure.py  hybrid.cpp  hybrid.hpp
src/sim_methods/: CMakeLists.txt  Makefile  fire_reaction_omp.hpp  sim_method.cpp  sim_method.hpp  sim_state_change.hpp  ssa_direct.cpp  ssa_direct.hpp  ssa_nrm.cpp  ssa_nrm.hpp  ssa_sod.cpp  ssa_sod.hpp  update.hpp
src/utils/: CMakeLists.txt  FunctionInterfaceForJIT.cpp  FunctionInterfaceForJIT.hpp  Makefile  detect_methods.hpp  exception.cpp  exception.hpp  file.cpp  file.hpp  generate_cxx_code.cpp  generate_cxx_code.hpp  graph_factory.cpp  graph_factory.hpp  graphml2dot.cpp  input_filetype.cpp  input_filetype.hpp  loadSBML.cpp  omp_diagnostics.cpp  omp_diagnostics.hpp  partition.cpp  partition.hpp  print_vertices.cpp  print_vertices.hpp  readSBML.cpp  rngen.hpp  rngen_impl.hpp  samples.cpp  samples.hpp  samples_ssa.cpp  samples_ssa.hpp  sbml_functions.cpp  sbml_functions.hpp  sbml_utils.cpp  sbml_utils.hpp  seed.hpp  state_io.hpp  state_io_cereal.hpp  state_io_impl.hpp  streambuff.hpp  streambuff_impl.hpp  (+17 more)
src/utils/unit_tests/: CMakeLists.txt  Makefile  t_graph_factory.cpp  t_rngen.cpp  t_state.cpp  t_state_cereal.cpp  t_state_rngen.cpp
src/utils/unit_tests/examples/: birtwistle.rates.graphml
tests/: Gillespie_77_eq29.m  Gillespie_77_eq38.m  eq29.graphml  eq38.graphml  eqn29.m  eqn38.m  plot_eq29.m  plot_eq38.m  run-sampling.sh  simple.graphml  simple.txt  simple.xml
tests/Birtwhistle/: birtwistle.graphml  birtwistle.rate.graphml  full_model_graphml.py
tests/Gillespie/: Gillespie_77_eq38.m  eq29-exprtk.graphml  eq29.graphml  eq38-exprtk.graphml  eqn29.m  plot_eq29.m  plot_eq29_merged.m  plot_eq38.m
tests/integration/: ssa.sh
tests/problem/Gillespie/: Gillespie_77_eq29.m  eqn29-sbml.xml  eqn29.m  eqn38.m
